--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "homepage": "https://github.com/LuisEulacioUCAB/ihuw-server#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.3",
@@ -63,6 +64,7 @@
     "@prisma/client": "^5.3.0",
     "apollo-server": "^3.12.1",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
@@ -70,7 +72,9 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "google-auth-library": "^9.4.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.0.1",
     "metaapi.cloud-sdk": "^23.6.0",
     "moment": "^2.29.4",
