--- a/package.json
+++ b/package.json
@@ -37,11 +37,17 @@
   ],
   "homepage": "https://github.com/LuisEulacioUCAB/ihuw-server#readme",
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/graphql-upload": "^16.0.7",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.6.3",
     "@types/node-cron": "^3.0.10",
+    "@types/passport": "^1.0.16",
+    "@types/passport-facebook": "^3.0.3",
     "@types/request": "^2.48.8",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -60,25 +66,41 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@aws-sdk/client-s3": "^3.485.0",
+    "@aws-sdk/lib-storage": "^3.485.0",
     "@faker-js/faker": "^8.2.0",
     "@prisma/client": "^5.3.0",
-    "apollo-server": "^3.12.1",
+    "apollo-server": "^3.13.0",
+    "apollo-server-core": "^3.13.0",
+    "apollo-upload-server": "^7.1.0",
+    "aws-sdk": "^2.1532.0",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "express-session": "^1.17.3",
     "google-auth-library": "^9.4.1",
     "graphql": "^16.8.1",
+    "graphql-upload": "^16.0.2",
+    "graphql-upload-ts": "^2.1.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "metaapi.cloud-sdk": "^23.6.0",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "postmark": "^4.0.2",
     "pre-commit": "^1.2.2",
     "request": "^2.88.2",
     "socket.io": "^4.7.2",
